--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <header>
+        <nav>
+            <h3>Ma<span>r</span>y</h3>
+            <ul>
+                <li><a href="">portfolio</a></li>
+                <li><a href="">blog</a></li>
+                
+                <li><button>Hire Me</button></li>
+
+            </ul>
+        </nav>
 
 
     </header>
@@ -14,7 +24,7 @@
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
