--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webdevelpoer-portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body>
     <header>
         <nav>
-            <h3>Ma<span>r</span>y</h3>
+            <h3 class="nav-title">Ma<span class="primary-color">r</span>y</h3>
             <ul>
                 <li><a href="">portfolio</a></li>
                 <li><a href="">blog</a></li>
                 
-                <li><button>Hire Me</button></li>
+                <li><button class="btn-primary">Hire Me</button></li>
 
             </ul>
         </nav>
