--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="primary-color">r</span>y</h3>
             <ul>
@@ -21,6 +21,17 @@
 
             </ul>
         </nav>
+        <div class="name">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I  am</h3>
+                <h1 class="banner-name">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly</p>
+                <p> he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Downlad CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+                <img class="profile-picture" src="images/hardy.png" alt="">
+        </div>
 
 
     </header>
