--- a/index.html
+++ b/index.html
@@ -25,18 +25,22 @@
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I  am</h3>
                 <h1 class="banner-name">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly</p>
-                <p> he. Morning because as to society behaved moments.</p>
+                <p class="p">Shot what able cold new see hold.Friendly as an betrayed formerly </p>
+                <p class="p" class="banner-dis">he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Downlad CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
-                <img class="profile-picture" src="images/hardy.png" alt="">
+                <img class="pro-pic" src="images/hardy.png" alt="">
         </div>
 
 
     </header>
     <main>
-
+            <section class="about">
+                <h3 class="section-title">About Me</h3>
+                <p class="section-decription">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                
+            </section>
     </main>
     <footer>
 
